# RICHGenerator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
distributions/: centers_R1-kde.npz  centers_R2-kde.npz  particle_proportions.json
distributions/log_momenta_kdes/: -11-kde.npz  -211-kde.npz  -2212-kde.npz  -3112-kde.npz  -321-kde.npz  1000010050-kde.npz  13-kde.npz  211-kde.npz  2212-kde.npz  321-kde.npz  3222-kde.npz  3312-kde.npz
src/rich_generator/: __init__.py  dataset_utils.py  generator.py  utility.py
src/rich_generator/distributions/log_momenta_kdes/: -13-kde.npz  -3222-kde.npz  -3312-kde.npz  11-kde.npz  3112-kde.npz
tests/: conftest.py  test_dataset_io.py  test_event_image_and_mapping.py  test_generator_core.py  test_kde_and_truncation.py  test_metadata_compare_and_errors.py  test_myoledataset_generation.py  test_utility_functions.py
